# reader

./: .gitignore  Cargo.toml  Dockerfile
crates/crier/: Cargo.toml  Dockerfile  README.md
crates/crier/src/: activitypub.rs  audit.rs  auth.rs  config.rs  error.rs  federation.rs  hashtag.rs  httpsig.rs  lib.rs  main.rs  notify.rs  store.rs
crates/crier/src/handlers/: admin.rs  ap.rs  mod.rs  web.rs
crates/crier/static/: app.css  service.css
crates/crier/templates/: admin.html  timeline.html
crates/crier/tests/: admin_flow.rs  crier_flow.rs  httpsig_flow.rs  pg_store.rs  social_flow.rs
crates/current/: Cargo.toml  Dockerfile  README.md
crates/current/src/: article.rs  auth.rs  config.rs  error.rs  feed.rs  lib.rs  main.rs  model.rs  nlp.rs  store.rs
crates/current/src/handlers/: feeds.rs  mod.rs  reader.rs  river.rs
crates/current/static/: app.css  service.css
crates/current/templates/: error.html  feeds.html  reader.html  river.html  river_tail.html
crates/current/tests/: categories_star_flow.rs  dedup_summary.rs  feed_flow.rs  feed_health.rs  live_fetch.rs  pg_store.rs  reader_flow.rs
crates/magpie/: Cargo.toml  Dockerfile  README.md
crates/magpie/src/: auth.rs  config.rs  error.rs  extract.rs  fetch.rs  lib.rs  main.rs  model.rs  store.rs
crates/magpie/src/handlers/: clips.rs  mod.rs
crates/magpie/static/: app.css  service.css
crates/magpie/templates/: error.html  highlights.html  index.html  reader.html  save.html  search.html  sites.html
crates/magpie/tests/: bulk_flow.rs  clip_flow.rs  export_flow.rs  highlights_flow.rs  pg_integration.rs  status_flow.rs
crates/odyssey/css/: components.css  tokens.css
crates/odyssey/src/: lib.rs
src/: main.rs
