[package]
name = "current"
version = "0.1.0"
edition = "2021"
description = "Current — enterprise RSS/Atom feed reader for the HOLDFAST stack (SSO-gated, background poller, unified river)."
license = "MIT OR Apache-2.0"

[lib]
name = "current"
path = "src/lib.rs"

[[bin]]
name = "current"
path = "src/main.rs"

[dependencies]
# HTTP framework (shared with keystone/pastefire/watchtower): Form/State/Path extractors,
# typed responses, server-rendered HTML.
axum = "0.8"
# Shared HOLDFAST design system CSS layered before Current's service-specific CSS.
odyssey = { path = "../odyssey" }
# Async runtime axum runs on. The Store trait is async: handlers `.await` it directly, PgStore
# uses sqlx natively, and the feed poller is a native-async Tokio task — a worker thread is
# NEVER blocked (no block_in_place, no sync-over-async bridge).
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
# Erase the async Store trait methods so `Arc<dyn Store>` stays object-safe (same seam as the
# rest of the estate).
async-trait = "0.1"
# Deserialize the HTML form bodies; serde_json is the established error-envelope dep kept for
# parity.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Ergonomic error enums.
thiserror = "2"
# Structured logging.
tracing = "0.1"
tracing-subscriber = "0.3"
# Epoch <-> UTC components for the "published"/"fetched" timestamps and RFC2822/RFC3339 feed
# date parsing (std only — no extra C deps). Same crate the rest of the estate pins.
time = { version = "0.3", default-features = false, features = ["std", "parsing", "formatting"] }
# CSPRNG (OsRng) for the random feed/item ids + the double-submit CSRF token. rand 0.8 matches
# keystone's OsRng path.
rand = "0.8"
# HMAC-SHA256 verification of the gateway-injected identity signature (X-Auth-Sig). Shared
# primitive with the rest of the estate; the canonical message matches Sluice's Go signer.
hmac = "0.12"
sha2 = "0.10"
# Portable PostgreSQL data layer. Runtime queries only (sqlx::query/Row) — NO compile-time
# macros, so the build needs NO database. rustls TLS (ring) — no openssl. The same standard SQL
# later runs unchanged on FusionDB over pgwire.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
# Outbound feed fetch over HTTP/HTTPS with timeouts + redirect following. rustls with the
# webpki bundled roots and NO bundled crypto provider, so we pin `ring` ourselves (matching
# corvid/sqlx) — no openssl, no aws-lc-rs/cmake in the slim builder.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider"] }
# The ring CryptoProvider installed process-wide for reqwest's rustls connector.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# Streaming XML pull-parser for the RSS 2.0 + Atom feed bodies (pure Rust, no C deps). Handles
# entities + CDATA; we drive it with a small hand-rolled state machine.
quick-xml = "0.37"

[dev-dependencies]
# ServiceExt::oneshot drives the Router in-process for the end-to-end tests (no port bind).
tower = { version = "0.5", features = ["util"] }
